completed setup, basic profile page, created user store, and simple interface

--- a/api/templates/api/spa/login_register.html
+++ b/api/templates/api/spa/login_register.html
@@ -7,7 +7,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
-                    <div class="card-header bg-primary text-white">
+                    <div class="card-header text-white" style="background-color: darkred;">
                         <h1 class="text-center">Register User</h1>
                     </div>
                     <div class="card-body">
@@ -59,7 +59,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header bg-primary text-white">
+                <div class="card-header text-white"  style="background-color: darkred; color: white;">
                     <h1 class="text-center">Login Here!</h1>
                     Errors: {{ form.errors }}
                     {{form.non_field_errors}}
