comments work in progress

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -2,32 +2,37 @@
 {% load static %}
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FinalProject</title>
-    <link rel="stylesheet" type="text/css" media="screen" href='{% static "styles/main.css" %}'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href='{% static "styles/main.css" %}'
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+    />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-</head>
-<body>
-
+  </head>
+  <body>
     {% if messages %}
     <ul class="messages">
-        {% for message in messages %}
-        <li {% if message.tags %} class="{{message.tags}}" {% endif %}>{{message}}</li>
-        {% endfor %}
+      {% for message in messages %}
+      <li {% if message.tags %} class="{{message.tags}}" {% endif %}>
+        {{message}}
+      </li>
+      {% endfor %}
     </ul>
-    {% endif %}
-
-    {% block content %}
-
-    {%  endblock content %}
-
-    
-</body>
+    {% endif %} {% block content %} {% endblock content %}
+  </body>
 </html>
