--- a/api/templates/api/spa/index.html
+++ b/api/templates/api/spa/index.html
@@ -6,13 +6,12 @@
     <link rel="icon" type="image/svg+xml" href="/static/api/spa/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECS639 Web Programming - Group CW Template</title>
-  <script type="module" crossorigin src="/static/api/spa/assets/index-e1f88d97.js"></script>
-  <link rel="stylesheet" href="/static/api/spa/assets/index-8f663279.css">
+  <script type="module" crossorigin src="/static/api/spa/assets/index-gdLcGBJk.js"></script>
+  <link rel="stylesheet" crossorigin href="/static/api/spa/assets/index-y_MYZALg.css">
 </head>
 
 <body>
     <div id="app"></div>
-    
 </body>
 
 </html>
