--- a/api/templates/api/spa/index.html
+++ b/api/templates/api/spa/index.html
@@ -6,12 +6,13 @@
     <link rel="icon" type="image/svg+xml" href="/static/api/spa/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECS639 Web Programming - Group CW Template</title>
-  <script type="module" crossorigin src="/static/api/spa/assets/index-K4w3eddc.js"></script>
-  <link rel="stylesheet" crossorigin href="/static/api/spa/assets/index-GEdr9qV8.css">
+  <script type="module" crossorigin src="/static/api/spa/assets/index-0da24291.js"></script>
+  <link rel="stylesheet" href="/static/api/spa/assets/index-7472e510.css">
 </head>
 
 <body>
     <div id="app"></div>
+    
 </body>
 
 </html>
