--- a/api/templates/api/spa/index.html
+++ b/api/templates/api/spa/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/static/api/spa/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECS639 Web Programming - Group CW Template</title>
-    <script
-      type="module"
-      crossorigin
-      src="/static/api/spa/assets/index-7fddf3cf.js"
-    ></script>
-    <link rel="stylesheet" href="/static/api/spa/assets/index-8828f408.css" />
-  </head>
+  <script type="module" crossorigin src="/static/api/spa/assets/index-82983a03.js"></script>
+  <link rel="stylesheet" href="/static/api/spa/assets/index-8828f408.css">
+</head>
 
-  <body>
+<body>
     <div id="app"></div>
-  </body>
+    
+</body>
+
 </html>
